# ultrazohm_sw

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  CHANGELOG.md  README.MD  bitbucket-pipelines.yml  claude.md  dataviewer_idea_list.txt  dataviewer_v_javascope.md  drone-pipeline.drone.yml  view_pmsm_model_test_results.py  vitis_pid40750.str  vitis_pid52889.str  vivado.jou  vivado_2083170.backup.jou  vivado_pid2429301.str
.devcontainer/: Dockerfile  devcontainer.json
Control_model_6Phase_MPC/: FCS_MPC_6ph_Regelungsmodell.slx  MPC_params.m
FCS_MPC_6Phase_Simulation/: FCS_MPC_6ph.slx  FCS_MPC_6ph.slxc  FCS_MPC_6ph_CIL.slx  FCS_MPC_6ph_CIL.slxc  FCS_MPC_6ph_CIL_FCS_reduced.slx  FCS_MPC_6ph_CIL_FCS_reduced.slxc  FCS_MPC_6ph_Regelungsmodell.slx  FCS_MPC_6ph_Regelungsmodell.slxc  Params_testbench.m  (+5 more)
ip_cores/InterlockDeadtime_2L/driver/: CMakeLists.txt  InterlockDeadtime.c  InterlockDeadtime.h  InterlockDeadtime_hw.c  InterlockDeadtime_hw.h  main.c
uz_dataviewer/: .gitignore  2026-06-18-141930-this-session-is-being-continued-from-a-previous-c.txt  NodeEditor.json  README.md  codex.md  dataviewer_v_javascope.md  pyproject.toml  requirements.txt  run.py
uz_dataviewer/docs/: ARCHITECTURE.md  LIBRARY.md  NATIVE_VS_WEB.md  NODES_FUTURE_IDEAS.md  REMOTE_DATA.md  ROADMAP.md  USAGE.md  WEB_LARGE_LOGS.md  dataviewer_v_javascope.md
uz_dataviewer/examples/: headless_example.py
uz_dataviewer/src/uz_dataviewer/: __init__.py  analysis.py  api.py  app.py  command_doc.py  commands.py  console.py  downsample.py  loader.py  model.py  nodes.py  plugins.py  session.py  state.py  transforms.py  webbridge.py
uz_dataviewer/src/uz_dataviewer/panels/: __init__.py  analysis.py  fft.py  histogram.py  nodes.py  plots.py
uz_dataviewer/tests/: test_analysis.py  test_api.py  test_command_doc.py  test_commands.py  test_console.py  test_downsample.py  test_loader.py  test_nodes_panel.py  test_parity.py  test_plot_types.py  test_plots.py  test_pyramid.py  test_session.py  test_timeorigin.py  test_transforms.py  test_webbridge.py
vitis/Sandbox/uz_LED/: CMakeLists.txt  uz_LED.c  uz_LED.h  uz_LED_testbench.c
(+25663 files in other folders)
